Fixed line item spacing

--- a/src/app/components/budget-category-card/budget-category-card.component.scss
+++ b/src/app/components/budget-category-card/budget-category-card.component.scss
@@ -12,7 +12,7 @@
     position: relative;
 
     h1 {
-        width: 50%;
+        width: 53%;
         font-size: 1.2rem;
         font-weight: 600;
         opacity: 0.6;
@@ -21,7 +21,7 @@
     }
 
     p {
-        width: 22%;
+        width: 21%;
         margin: 0;
         opacity: 0.4;
         text-align: center;
@@ -31,7 +31,7 @@
         display: flex;
         align-items: center;
         height: 2rem;
-        width: 50%;
+        width: 53%;
 
         input {
             outline: none;
