--- a/src/app/components/budget-category-item/budget-category-item.component.scss
+++ b/src/app/components/budget-category-item/budget-category-item.component.scss
@@ -19,7 +19,7 @@
 
     .title-wrapper {
         display: flex;
-        width: 50%;
+        width: 53%;
         align-items: center;
 
         .fund-logo {
@@ -41,7 +41,7 @@
             border-radius: 0.5rem;
             padding: 0.2rem;
             padding-left: 0.5rem;
-            margin-left: 0.5rem;
+            margin-left: 0.2rem;
 
             &:hover {
                 @include line-item-input();
@@ -53,7 +53,7 @@
     }
 
     .planned-amount {
-        width: 22%;
+        width: 21%;
         font-size: 1rem;
         font-weight: 400;
         font-family: inherit;
@@ -73,7 +73,7 @@
 
     p {
         margin: 0;
-        width: 22%;
+        width: 21%;
         font-size: 1rem;
         font-weight: 400;
         text-align: center;
